changed the mongo db database...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,9 @@
-# DataSource Configuration
-#spring.datasource.generate-unique-name=false
-#spring.datasource.name=tacocloud
-#spring.datasource.url=jdbc:mysql://localhost:3306/flightsSpring?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# H2 Console Configuration
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.datasource.h2.url=jdbc:h2:mem:flightsDB
-spring.datasource.generate-unique-name = false
-spring.datasource.name: flightsDB
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.h2.platform=h2
-spring.datasource.h2.initialization-mode=always
+
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/flightsDB
+spring.data.mongodb.database=flightsDB
+
 
 
 #base pasth for spring rest
@@ -22,9 +11,3 @@ spring.data.rest.base-path: /data-api
 
 # start on the 8082 port
 server.port=8082 
-
-# JPA Configuration
-spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
